compiler/tests/liva/errors/e1000_lexer_error.liva
// Error Test: E1000 — Lexer error (unclosed string literal)
// EXPECT: E1000
main() {
    let s = "this string is never closed
    print(s)
}
